package org.switch2022.project.model;

public class AccountDTO {
    public String email;
    public boolean status;

    public AccountDTO(String email, boolean status) {
    }
}
