@startuml

class ListAccountsUI {}

class ListAccountsController{
accountList: AccountList
listProjectDTO()
}


class Account {
profile : Profile
name : String
email : String
phone : String
photo : Photo
isActive : boolean
}

class AccountList {
accounts: List<Account>
getAccountAtIndex(index)
}

class AccountDTO {
email : String
isActive : boolean
}

AccountList "1" *-- "*" Account : has
ListAccountsController "1" o-- "1" AccountList
ListAccountsUI "1" o-- "1" ListAccountsController
AccountList ..> AccountDTO
AccountDTO ..> Account

@enduml